fix alignment bugs

--- a/src/sass/_game.scss
+++ b/src/sass/_game.scss
@@ -16,6 +16,9 @@ input[type="submit"] {
 }
 
 .playersContainer {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 	padding-top: 10px;
 	.topbuttons {
 		position: absolute;
@@ -35,13 +38,13 @@ input[type="submit"] {
 }
 
 .players {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 5px;
-    display: inline-block;
+  margin-bottom: 5px;
+  padding-left: 0;
+  display: inline-block;
 	li {
 		float: left;
 		list-style: none;
+    text-align: center;
 		width: 60px;
 		padding-left: 20px;
 		padding-right: 20px;
@@ -102,6 +105,7 @@ input[type="submit"] {
     padding: 20px 15px 10px 15px;
     position: absolute;
     display: inline-block;
+    text-align: center;
 	}
 	div {
     height: 90px;
@@ -136,22 +140,22 @@ input[type="submit"] {
     font-weight: bold;
     color: #2e2e2d;
 	}
-	 .player1 {
+	 .player-one {
     background: $blue;
     color: #182831;
 	}
 
-	.player3 {
+	.player-one-locked {
     background: $blueLocked;
     color: #002033;
 	}
 
-	.player2 {
+	.player-two {
     background: $red;
     color: #311e1c;
 	}
 
-	.player4 {
+	.player-two-locked {
     background: $redLocked;
     color: #330d09;
 	}
